# force-platform-app

./: .gitignore  Dockerfile  README.md  app.py  config.yaml  pyproject.toml  requirements-dev.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker_image.yaml  project_lint_black.yaml  project_test.yaml
.streamlit/: config.toml
custom_configs/: all_sensors_example.yaml  single_1d_platform.yaml  single_3d_platform.yaml  two_imus.yaml
src/enums/: configPaths.py  sensorParams.py
src/figures/: generalFigure.py  platformFigures.py
src/handlers/: sensorGroup.py
src/managers/: configManager.py  dataManager.py  sensorManager.py
st_pages/: dashboard.py  home.py  settings.py
tests/: test_manager_config.py
